# Enhanced-Multimodel-Rag-Hackerton

./: .env.example  .gitignore  CLAUDE.md  README.md  config.yaml  main.py  pyproject.toml  railway.toml  render.yaml
.claude/commands/: dev.md
.github/workflows/: deploy-ecs.yml  scale-down.yml  scale-up.yml
deploy/: ARCHITECTURE.md  DEPLOYMENT.md
deploy/aws/: deploy.sh  setup-alb.sh  setup-iam.sh  task-definition.json
docker/: Dockerfile  Dockerfile.gpu  docker-compose.yml
notebooks/: 01_medical_medsam.ipynb  02_finance_berkshire_10k.ipynb  03_graph_rag_who_covid.ipynb  04_bifrost_llm_gateway.ipynb  05_guardrails_beginner.ipynb  explore_pipeline.ipynb  visualiser.py
scripts/: build_bifrost_nb.py  build_graph_rag_nb.py  build_guardrails_nbs.py  ingest.py  inject_github_secrets.py  parse.py  patch_bifrost_failover.py  patch_finance_nb.py  rebuild_bifrost_nb.py  rebuild_graph_rag_nb.py  search.py  serve.py  warmup.py
src/doc_intel_rag/: config.py  exceptions.py  logging_config.py
src/doc_intel_rag/api/: app.py  dependencies.py  middleware.py  schemas.py
src/doc_intel_rag/api/routes/: admin.py  generate.py  graph.py  health.py  ingest.py  search.py
src/doc_intel_rag/chunking/: document_chunker.py  schemas.py  semantic_merger.py
src/doc_intel_rag/enrichment/: captioner.py  concept_extractor.py  formula_enricher.py  graph_enricher.py
src/doc_intel_rag/gateway/: __init__.py  llm_gateway.py
src/doc_intel_rag/generation/: citation_formatter.py  context_builder.py  generator.py  prompt_templates.py
src/doc_intel_rag/ingestion/: cache.py  embedder.py  graph_embedder.py  graph_store.py  vector_store.py
src/doc_intel_rag/parsing/: cross_ref_linker.py  entity_types.py  graph_extractor.py  pipeline.py  post_processor.py
src/doc_intel_rag/retrieval/: groundedness.py  hybrid_searcher.py  reranker.py  semantic_router.py  web_fallback.py
src/doc_intel_rag/safety/: __init__.py  input_guard.py  output_guard.py  phi_detector.py  rate_limiter.py  schemas.py
src/doc_intel_rag/utils/: async_utils.py  image_utils.py  pdf_utils.py  token_utils.py
terraform/: locals.tf  main.tf  outputs.tf  variables.tf  versions.tf
terraform/modules/alb/: main.tf  outputs.tf  variables.tf
terraform/modules/ecr/: main.tf  outputs.tf  variables.tf
terraform/modules/ecs/: main.tf  outputs.tf  variables.tf
terraform/modules/iam/: main.tf  outputs.tf  variables.tf
terraform/modules/monitoring/: main.tf  outputs.tf  variables.tf
terraform/modules/networking/: main.tf  outputs.tf  variables.tf
terraform/modules/secrets/: main.tf  outputs.tf  variables.tf
terraform/scripts/: bootstrap.sh
tests/: conftest.py  notebook.ipynb
tests/integration/: test_generate_endpoint.py  test_ingest_pipeline.py  test_search_endpoint.py
tests/unit/: test_chunker.py  test_graph_extractor.py  test_groundedness.py  test_safety_input.py
