[project]
name = "doc-intel-rag"
version = "0.1.0"
description = "Production-grade enhanced multimodal RAG system with graph intelligence"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # --- Core framework ---
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    # --- Async HTTP ---
    "httpx>=0.27.0",
    # --- LLM / OpenAI-compatible client ---
    "openai>=1.54.0",
    # --- Document parsing ---
    "pymupdf>=1.24.0",
    "python-docx>=1.1.2",
    "python-pptx>=1.0.2",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.3.0",
    "markdown>=3.7",
    # --- Vector database ---
    "qdrant-client>=1.12.0",
    # --- Graph ---
    "networkx>=3.4.0",
    "node2vec>=0.4.6",
    # --- Sparse embeddings / BM25 ---
    "scikit-learn>=1.5.0",
    "scipy>=1.14.0",
    # --- NLP / NER ---
    "spacy>=3.8.0",
    # --- Formula handling ---
    "pylatexenc>=2.10",
    # --- Safety ---
    "presidio-analyzer>=2.2.355",
    "presidio-anonymizer>=2.2.355",
    "detoxify>=0.5.2",
    # --- Rerankers (not Qwen/BGE/Ollama/Mesh) ---
    "cohere>=5.11.0",
    # --- Web fallback ---
    "tavily-python>=0.5.0",
    # --- Caching ---
    "redis[asyncio]>=5.2.0",
    # --- Observability ---
    "loguru>=0.7.2",
    "opentelemetry-api>=1.29.0",
    "opentelemetry-sdk>=1.29.0",
    "opentelemetry-instrumentation-fastapi>=0.50b0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.29.0",
    "prometheus-fastapi-instrumentator>=7.0.0",
    # --- Rate limiting ---
    "slowapi>=0.1.9",
    # --- Auth ---
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    # --- Templates ---
    "jinja2>=3.1.4",
    # --- Token counting ---
    "tiktoken>=0.8.0",
    # --- Retry ---
    "tenacity>=9.0.0",
    # --- Utilities ---
    "python-multipart>=0.0.17",
    "aiofiles>=24.1.0",
    "python-dotenv>=1.0.1",
    "numpy>=1.26.0",
    "pillow>=11.0.0",
    # --- Sentence transformers for faithfulness NLI ---
    "sentence-transformers>=3.3.0",
    "torch>=2.4.0",
    # --- Neo4j optional export ---
    "neo4j>=5.26.0",
    # --- YAML ---
    "pyyaml>=6.0.2",
    # --- Click for CLI scripts ---
    "click>=8.1.7",
    # --- Streamlit visualiser ---
    "streamlit>=1.40.0",
    # --- Jina reranker HTTP (already covered by httpx above) ---
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "respx>=0.21.0",
    "mypy>=1.13.0",
    "ruff>=0.8.0",
    "types-redis>=4.6.0",
    "types-PyYAML>=6.0.12",
    "types-aiofiles>=24.1.0",
    "factory-boy>=3.3.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/doc_intel_rag"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "respx>=0.21.0",
    "mypy>=1.13.0",
    "ruff>=0.8.0",
    "factory-boy>=3.3.1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
